--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ra-dropdown-list",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://yourusername.github.io/your-repo-name",
+  "homepage": "https://alexwebart.github.io/ra-dropdown-list",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
