new version build to gh-page update yml v.1.6 25.04.23

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -14,11 +14,13 @@ install:
 build: off  # отключаем встроенную в appveyor систему сборки
 
 build_script:
+  - git config --global user.name AppVeyor
+  - git config --global user.email ci@appveyor.com
   - yarn run deploy   # команда сборки
 
 deploy_script:  # скрипт развёртывания
   - git config --global credential.helper store
-  - git config --global user.name AlexWebArt
-  - git config --global user.email gelusiv@gmail.com
+  - git config --global user.name AppVeyor
+  - git config --global user.email ci@appveyor.com
   - echo "https://$GITHUB_TOKEN:x-oauth-basic@github.com" > "$HOME/.git-credentials"
   - npx push-dir --dir=public --branch=gh-pages --force --verbose
