--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -14,8 +14,8 @@ install:
 build: off  # отключаем встроенную в appveyor систему сборки
 
 build_script:
-  - git config --global user.name AppVeyor
-  - git config --global user.email ci@appveyor.com
+  - git config --global user.name AlesWebArt
+  - git config --global user.email elusiv@mail.ru
   - yarn run deploy   # команда сборки
 
 deploy_script:  # скрипт развёртывания
