--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ra-dropdown-list",
   "version": "0.1.0",
   "private": true,
+  "repository": "https://github.com/ra-dropdown-list.git",
   "homepage": "https://alexwebart.github.io/ra-dropdown-list",
   "author": "AlexWEBArt",
   "dependencies": {
@@ -20,7 +21,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "yarn run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d public"
   },
   "eslintConfig": {
     "extends": [
