--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -14,12 +14,13 @@ install:
 build: off  # отключаем встроенную в appveyor систему сборки
 
 build_script:
-  - yarn run build   # команда сборки
+  - yarn run deploy   # команда сборки
 
 deploy_script:  # скрипт развёртывания
-  - yarn run deploy
+  - git config --global user.email github-actions@github.com
+  - git config --global user.name github-actions
   - git config --global credential.helper store
-  - git config --global user.name AppVeyor
-  - git config --global user.email ci@appveyor.com
+  # - git config --global user.name AppVeyor
+  # - git config --global user.email ci@appveyor.com
   - echo "https://$GITHUB_TOKEN:x-oauth-basic@github.com" > "$HOME/.git-credentials"
   - npx push-dir --dir=public --branch=gh-pages --force --verbose
